--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flat ACS Atlas</title>
+    <title>Million Neighborhoods Explorer</title>
+    <meta name="description" content="Explore the blocks and regions of sub-saharan Africa. A project by the Mansueto institute for urban innovation." />
   </head>
   <body>
     <div id="root"></div>
